Update to Gemini 1.5 Flash model and add GitHub Actions CI/CD

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
-# Anthropic Claude API Key
-ANTHROPIC_API_KEY=your_api_key_here
+# Google Generative AI API Key (for Gemini)
+# 取得先: https://aistudio.google.com/app/apikey
+GOOGLE_GENERATIVE_AI_API_KEY=your_api_key_here
 
 # MongoDB Connection URL (used by Prisma)
+# ローカル開発環境:
 DATABASE_URL=mongodb://localhost:27017/a-chat
+# MongoDB Atlas（本番環境）の例:
+# DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/a-chat?retryWrites=true&w=majority
 
-# Next.js
+# Next.js 環境設定
 NODE_ENV=development
+# 本番環境では: NODE_ENV=production
+
+# オプション: Next.jsサーバーのポート番号（デフォルト: 3000）
+# Cloud Runでは自動的に8080が使用されます
+# PORT=3000
