--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ai": "^6.0.6",
     "hono": "^4.11.3",
     "next": "^16.1.0",
+    "playwright": "^1.57.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^4.3.4"
