--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,6 +94,18 @@ jobs:
             --min-instances 0 \
             --max-instances 10 \
             --timeout 300 \
+            --project $PROJECT_ID || \
+          gcloud run deploy $SERVICE_NAME \
+            --image $IMAGE_NAME:$GITHUB_SHA \
+            --platform managed \
+            --region $REGION \
+            --allow-unauthenticated \
+            --update-env-vars "GOOGLE_GENERATIVE_AI_API_KEY=${{ secrets.GOOGLE_GENERATIVE_AI_API_KEY }},DATABASE_URL=${{ secrets.DATABASE_URL }},NODE_ENV=production" \
+            --memory 512Mi \
+            --cpu 1 \
+            --min-instances 0 \
+            --max-instances 10 \
+            --timeout 300 \
             --project $PROJECT_ID
 
       - name: Get service URL
